--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "electronpractice",
-  "productName": "electronpractice",
+  "name": "vchat",
+  "productName": "VChat",
   "version": "1.0.0",
-  "description": "My Electron application description",
+  "description": "AI Chat Application with multiple providers support",
   "main": ".vite/build/main.js",
   "scripts": {
     "start": "electron-forge start",
@@ -17,17 +17,23 @@
     "email": "leach.liu@feisu.com"
   },
   "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/your-username/vchat.git"
+  },
   "devDependencies": {
     "@babel/core": "^7.28.5",
     "@babel/eslint-parser": "^7.28.5",
     "@electron-forge/cli": "^7.10.2",
     "@electron-forge/maker-deb": "^7.10.2",
+    "@electron-forge/maker-dmg": "^7.10.2",
     "@electron-forge/maker-rpm": "^7.10.2",
     "@electron-forge/maker-squirrel": "^7.10.2",
     "@electron-forge/maker-zip": "^7.10.2",
     "@electron-forge/plugin-auto-unpack-natives": "^7.10.2",
     "@electron-forge/plugin-fuses": "^7.10.2",
     "@electron-forge/plugin-vite": "^7.10.2",
+    "@electron-forge/publisher-github": "^7.10.2",
     "@electron/fuses": "^1.8.0",
     "@iconify/vue": "^5.0.0",
     "@types/electron-squirrel-startup": "^1.0.2",
